logs/Slang/generated/yosys/errors_syntax_err10.sv.log
name: errors_syntax_err10
description: Tests imported from yosys
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/errors/syntax_err10.v
should_fail: 1
tags: yosys
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tools/yosys/tests/errors/syntax_err10.v:2:19: error: packed dimensions not allowed on predefined integer type 'integer'
parameter integer [2:0]x=0;
                  ^
